--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,20 +15,21 @@
             android:id="@+id/chat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:textIsSelectable="true"/>
     </ScrollView>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <EditText
             android:id="@+id/input"
-            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Type message"/>
+            android:layout_weight="1"
+            android:hint="Message"/>
 
         <Button
             android:id="@+id/send"
@@ -36,4 +37,5 @@
             android:layout_height="wrap_content"
             android:text="Send"/>
     </LinearLayout>
+
 </LinearLayout>
